# impaqt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bayes_notes.txt  install.sh  notes.txt
.github/workflows/: c-cpp.yml
cmake/: gtest.cmake
conda/: README.md  build.sh  meta.yaml
docs/: CPP_CLEANUP_ROADMAP.md  README.md  impaqt_derivation.docx
ext/: README.md
ext/bamtools/src/api/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/bam/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/index/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/io/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/sam/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/utils/: Makefile  cmake_install.cmake
ext/seqan/include/seqan/basic/: basic_stream.h
include/: AnnotationList.h  ArgParser.h  AssignClusters.h  ClusterList.h  ClusterNode.h  ContainmentList.h  DBSCAN.h  GeneNode.h  ThreadQueue.h  global_args.h  impaqt.h  utils.h
lib/: AnnotationList.h  ArgParser.h  AssignClusters.h  ClusterList.h  ClusterNode.h  DBSCAN.h  GeneNode.h  ThreadQueue.h  annotation.h  cluster.h  dbscan.h  gene.h  global_args.h  impaqt.h  node.h  parser.h  queue.h  utils.h
src/: AnnotationList.cpp  AssignClusters.cpp  ClusterList.cpp  ClusterList.sublime-workspace  ContainmentList.cpp  DBSCAN.cpp  impaqt.cpp  utils.cpp
test/: AnnotationList_test.cpp  AssignClusters_test.cpp  ClusterList_test.cpp  DBSCAN_test.cpp  impaqt_test.cpp
test/data/: dbscan.result  dbscan_test.bam  dbscan_test.bam.bai  test.bam  test.bam.bai  test.gtf  test_cluster.txt  test_collapse.txt  test_negative.bam  test_negative.bam.bai  test_negative.bam.csi
test/test/: AssignClusters_test.cpp  ClusterList_test.cpp  DBSCAN_test.cpp
test/test/data/: SpliceTest.bam  SpliceTest.bam.bai  dbscan_test.bam  test.gtf
test/test/test/: AnnotationList_test.cpp  ClusterList_test.cpp
test/test/test/data/: SpliceTest.result  dbscan.result  test.bam.bai  test_cluster.txt
